--- a/src/Kbuild
+++ b/src/Kbuild
@@ -7,7 +7,7 @@ ccflags-y := -O3 -fvisibility=hidden
 ccflags-$(CONFIG_TUNNELBRIDGE_DEBUG) += -DDEBUG -g
 ccflags-y += -D'pr_fmt(fmt)=KBUILD_MODNAME ": " fmt'
 
-tunnelbridge-y := main.o noise.o device.o peer.o timers.o queueing.o send.o receive.o socket.o peerlookup.o ratelimiter.o cookie.o netlink.o
+tunnelbridge-y := main.o noise.o client.o device.o peer.o timers.o queueing.o send.o receive.o socket.o peerlookup.o ratelimiter.o cookie.o netlink.o
 
 include $(src)/crypto/Kbuild.include
 include $(src)/compat/Kbuild.include
